src/objects/Apttus_Config2__UserView__c.object
<CustomObject>
    <description>Represents the view name and user/profile/UserRole details for the cart view.</description>
    <fields>
        <fullName>Apttus_Config2__FilterCriteria__c</fullName>
        <description>Cart views filter criteria specification</description>
        <inlineHelpText>Cart views filter criteria specification</inlineHelpText>
        <label>Filter Criteria</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Flow__c</fullName>
        <description>Captures the Flow ID for the view settings</description>
        <inlineHelpText>Captures the Flow ID for the view settings</inlineHelpText>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupBy__c</fullName>
        <description>Captures the GroupBy field for the view setting record</description>
        <inlineHelpText>Captures the GroupBy field for the view setting record</inlineHelpText>
        <label>GroupBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsDefaultRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the default value for the record based on apex logic.This doesn&apos;t reflect the default attribute provided by the user.</description>
        <inlineHelpText>This field stores the default value for the record based on apex logic.This doesn&apos;t reflect the default attribute provided by the user.</inlineHelpText>
        <label>IsDefaultRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsDefaultView__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As we create individual records for roles/users/profiles added in the admin UI, introducing this field to track view level default attribute</description>
        <inlineHelpText>As we create individual records for roles/users/profiles added in the admin UI, introducing this field to track view level default attribute</inlineHelpText>
        <label>IsDefaultView</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProfileId__c</fullName>
        <description>Used to store profileIds as comma separated values</description>
        <inlineHelpText>Used to store profileIds as comma separated values</inlineHelpText>
        <label>ProfileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RoleId__c</fullName>
        <description>Stores userrole ID</description>
        <inlineHelpText>Stores userrole ID</inlineHelpText>
        <label>RoleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Source__c</fullName>
        <description>Indicates from which custom object the available columns come from.</description>
        <inlineHelpText>Indicates from which custom object the available columns come from.</inlineHelpText>
        <label>SourceObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>Used to store the cart view type (Public/Private/Protected)</description>
        <inlineHelpText>Used to store the cart view type (Public/Private/Protected)</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UserId__c</fullName>
        <description>Used to store users ID for the cart view as comma separator values.</description>
        <inlineHelpText>Used to store users ID for the cart view as comma separator values.</inlineHelpText>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User View</label>
    <nameField>
        <label>User View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>